; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/util/extr_bmem.c_bmalloc.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/util/extr_bmem.c_bmalloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8* (i32)* }

@alloc = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@.str = private unnamed_addr constant [49 x i8] c"Out of memory while trying to allocate %lu bytes\00", align 1
@num_allocs = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @bmalloc(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i8* (i32)*, i8* (i32)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @alloc, i32 0, i32 0), align 8
  %5 = load i64, i64* %2, align 8
  %6 = trunc i64 %5 to i32
  %7 = call i8* %4(i32 %6)
  store i8* %7, i8** %3, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %16, label %10

10:                                               ; preds = %1
  %11 = load i64, i64* %2, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %16, label %13

13:                                               ; preds = %10
  %14 = load i8* (i32)*, i8* (i32)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @alloc, i32 0, i32 0), align 8
  %15 = call i8* %14(i32 1)
  store i8* %15, i8** %3, align 8
  br label %16

16:                                               ; preds = %13, %10, %1
  %17 = load i8*, i8** %3, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %23, label %19

19:                                               ; preds = %16
  %20 = call i32 (...) @os_breakpoint()
  %21 = load i64, i64* %2, align 8
  %22 = call i32 @bcrash(i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0), i64 %21)
  br label %23

23:                                               ; preds = %19, %16
  %24 = call i32 @os_atomic_inc_long(i32* @num_allocs)
  %25 = load i8*, i8** %3, align 8
  ret i8* %25
}

declare dso_local i32 @os_breakpoint(...) #1

declare dso_local i32 @bcrash(i8*, i64) #1

declare dso_local i32 @os_atomic_inc_long(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
